--- a/models.ipynb
+++ b/models.ipynb
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1677,31 +1677,31 @@
        "9                              [(Kessel, NNP, B-PERSON)]\n",
        "42                               [(Lord, NNP, B-PERSON)]\n",
        "43                              [(Rebel, NNP, B-PERSON)]\n",
-       "66       [(Deak, NNP, B-PERSON), (Uncle, NNP, B-PERSON)]\n",
+       "66     [(Deak, NNP, B-PERSON), (Uncle, NNP, B-PERSON)...\n",
        "70                              [(Biggs, NNP, B-PERSON)]\n",
        "106                               [(Sir, NNP, B-PERSON)]\n",
-       "112                             [(Toshi, NNP, B-PERSON)]\n",
+       "112    [(Toshi, NNP, B-PERSON), (Station, NNP, I-PERS...\n",
        "114                               [(Red, NNP, B-PERSON)]\n",
        "129                             [(Biggs, NNP, B-PERSON)]\n",
        "157                             [(Artoo, NNP, B-PERSON)]\n",
        "158    [(Kenobi, NNP, B-PERSON), (Quite, NNP, B-PERSO...\n",
-       "159      [(Kenobi, NNP, B-PERSON), (Ben, NNP, B-PERSON)]\n",
+       "159    [(Kenobi, NNP, B-PERSON), (Ben, NNP, B-PERSON)...\n",
        "178         [(Ben, NNP, B-PERSON), (Ben, NNP, B-PERSON)]\n",
        "191      [(Biggs, NNP, B-PERSON), (Tank, NNP, B-PERSON)]\n",
        "206                               [(Boy, NNP, B-PERSON)]\n",
        "216    [(Old, NNP, B-PERSON), (Ben, NNP, B-PERSON), (...\n",
-       "222                             [(Master, NN, B-PERSON)]\n",
-       "223                             [(Uncle, NNP, B-PERSON)]\n",
-       "229                              [(Sand, NNP, B-PERSON)]\n",
-       "234         [(Ben, NNP, B-PERSON), (Ben, NNP, B-PERSON)]\n",
+       "222      [(Master, NN, B-PERSON), (Luke, NNP, I-PERSON)]\n",
+       "223      [(Uncle, NNP, B-PERSON), (Owen, NNP, I-PERSON)]\n",
+       "229     [(Sand, NNP, B-PERSON), (People, NNP, I-PERSON)]\n",
+       "234    [(Ben, NNP, B-PERSON), (Ben, NNP, B-PERSON), (...\n",
        "236                            [(Kenobi, NNP, B-PERSON)]\n",
        "237                            [(Kenobi, NNP, B-PERSON)]\n",
-       "248                            [(Master, NNP, B-PERSON)]\n",
+       "248     [(Master, NNP, B-PERSON), (Luke, NNP, I-PERSON)]\n",
        "256                             [(Which, NNP, B-PERSON)]\n",
        "264    [(Jedi, NNP, B-PERSON), (Darth, NNP, B-PERSON)...\n",
        "270    [(Kenobi, NNP, B-PERSON), (Kenobi, NNP, B-PERS...\n",
        "276                               [(God, NNP, B-PERSON)]\n",
-       "296                               [(Sand, NN, B-PERSON)]\n",
+       "296      [(Sand, NN, B-PERSON), (People, NNP, I-PERSON)]\n",
        "299                             [(Jawas, NNP, B-PERSON)]\n",
        "302    [(Uncle, NNP, B-PERSON), (Aunt, NNP, B-PERSON)...\n",
        "                             ...                        \n",
@@ -1712,15 +1712,15 @@
        "303                           [(Sullust, NNP, B-PERSON)]\n",
        "308                           [(Shuttle, NNP, B-PERSON)]\n",
        "357                           [(Trouble, NNP, B-PERSON)]\n",
-       "377                              [(Lord, NNP, B-PERSON)]\n",
+       "377      [(Lord, NNP, B-PERSON), (Vader, NNP, I-PERSON)]\n",
        "386                             [(Artoo, NNP, B-PERSON)]\n",
        "392                             [(Great, NNP, B-PERSON)]\n",
        "393                               [(Han, NNP, B-PERSON)]\n",
-       "402                            [(Master, NNP, B-PERSON)]\n",
+       "402     [(Master, NNP, B-PERSON), (Luke, NNP, I-PERSON)]\n",
        "417                          [(Threepio, NNP, B-PERSON)]\n",
-       "420                            [(Master, NNP, B-PERSON)]\n",
-       "422                            [(Master, NNP, B-PERSON)]\n",
-       "424    [(Master, NNP, B-PERSON), (Artoo, NNP, B-PERSO...\n",
+       "420     [(Master, NNP, B-PERSON), (Luke, NNP, I-PERSON)]\n",
+       "422     [(Master, NNP, B-PERSON), (Luke, NNP, I-PERSON)]\n",
+       "424    [(Master, NNP, B-PERSON), (Luke, NNP, I-PERSON...\n",
        "433                              [(Okay, NNP, B-PERSON)]\n",
        "454                              [(Leia, NNP, B-PERSON)]\n",
        "458                              [(Luke, NNP, B-PERSON)]\n",
@@ -1732,19 +1732,19 @@
        "568      [(Artoo, NNP, B-PERSON), (Artoo, NN, B-PERSON)]\n",
        "593                              [(Move, NNP, B-PERSON)]\n",
        "626                               [(Han, NNP, B-PERSON)]\n",
-       "641                               [(Red, NNP, B-PERSON)]\n",
+       "641       [(Red, NNP, B-PERSON), (Group, NNP, I-PERSON)]\n",
        "651                             [(Split, NNP, B-PERSON)]\n",
        "667                             [(Wedge, NNP, B-PERSON)]\n",
        "Name: person, Length: 190, dtype: object"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trilogy['person'] = trilogy.NE.apply(lambda x: [s for s in x if s[2] == 'B-PERSON'])\n",
+    "trilogy['person'] = trilogy.NE.apply(lambda x: [s for s in x if s[2] == 'B-PERSON' or s[2] == 'I-PERSON'])\n",
     "trilogy[trilogy.person.str.len() != 0].person"
    ]
   },
@@ -1985,6 +1985,167 @@
    "source": [
     "trilogy['gpe'] = trilogy.NE.apply(lambda x: [s for s in x if s[2] == 'B-GPE'])\n",
     "trilogy[trilogy.gpe.str.len() != 0].gpe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 0: yes forc side dark father power strong must way vader\n",
+      "Cluster 1: see come artoo could ca oh know chewi friend ship\n",
+      "Cluster 2: go let artoo got one power us away think right\n",
+      "Cluster 3: like look much got make back may scoundrel right sound\n",
+      "Cluster 4: get well take us let want oh help one control\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "number_of_clusters = 5\n",
+    "pipe = Pipeline([('tfidf', TfidfVectorizer()),\n",
+    "               ('m', KMeans(n_clusters=number_of_clusters, random_state=seed))])\n",
+    "\n",
+    "\n",
+    "pipe = pipe.fit(X_train_raw)\n",
+    "vec = pipe.steps[0][1]\n",
+    "km = pipe.steps[1][1]\n",
+    "order_centroids = km.cluster_centers_.argsort()[:, ::-1]\n",
+    "terms = vec.get_feature_names()\n",
+    "for i in range(number_of_clusters):\n",
+    "    top_ten_words = [terms[ind] for ind in order_centroids[i, :10]]\n",
+    "    print(\"Cluster {}: {}\".format(i, ' '.join(top_ten_words)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(X_train_raw)\n",
+    "df['cluster'] =  km.labels_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dialogue_clean</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>yes yes obi-wan listen cave rememb failur cave</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>hello welcom 'm lando calrissian 'm administr ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>two bantha n't see ... wait second sand peopl ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>624</th>\n",
+       "      <td>ca n't keep vision head friend got help</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>'d crazi follow us would n't</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>637</th>\n",
+       "      <td>stop must depend fulli train jedi knight forc ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>well come get late hope get back uncl owen rea...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>well thing n't sinc left bigg ... quiet</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>get mess realli n't know seem made suffer lot ...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>643</th>\n",
+       "      <td>luke n't give hate -- lead dark side</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        dialogue_clean  cluster\n",
+       "631     yes yes obi-wan listen cave rememb failur cave        0\n",
+       "599  hello welcom 'm lando calrissian 'm administr ...        1\n",
+       "229  two bantha n't see ... wait second sand peopl ...        1\n",
+       "624            ca n't keep vision head friend got help        1\n",
+       "302                       'd crazi follow us would n't        1\n",
+       "637  stop must depend fulli train jedi knight forc ...        0\n",
+       "223  well come get late hope get back uncl owen rea...        4\n",
+       "70             well thing n't sinc left bigg ... quiet        4\n",
+       "53   get mess realli n't know seem made suffer lot ...        4\n",
+       "643               luke n't give hate -- lead dark side        0"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
    ]
   },
   {
