--- a/models.ipynb
+++ b/models.ipynb
@@ -1996,18 +1996,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster 0: yes forc side dark father power strong must way vader\n",
-      "Cluster 1: see come artoo could ca oh know chewi friend ship\n",
-      "Cluster 2: go let artoo got one power us away think right\n",
-      "Cluster 3: like look much got make back may scoundrel right sound\n",
-      "Cluster 4: get well take us let want oh help one control\n"
+      "Cluster 0: power side forc father yes dark jedi vader must way want sir good strong wan\n",
+      "Cluster 1: go get artoo let us got take back one help right come oh well think\n",
+      "Cluster 2: see come friend ca look like chewi know littl well could think luke ship got\n"
      ]
     }
    ],
@@ -2015,7 +2013,7 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "number_of_clusters = 5\n",
+    "number_of_clusters = 3\n",
     "pipe = Pipeline([('tfidf', TfidfVectorizer()),\n",
     "               ('m', KMeans(n_clusters=number_of_clusters, random_state=seed))])\n",
     "\n",
@@ -2026,13 +2024,13 @@
     "order_centroids = km.cluster_centers_.argsort()[:, ::-1]\n",
     "terms = vec.get_feature_names()\n",
     "for i in range(number_of_clusters):\n",
-    "    top_ten_words = [terms[ind] for ind in order_centroids[i, :10]]\n",
+    "    top_ten_words = [terms[ind] for ind in order_centroids[i, :15]]\n",
     "    print(\"Cluster {}: {}\".format(i, ' '.join(top_ten_words)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -2079,17 +2077,17 @@
        "    <tr>\n",
        "      <th>599</th>\n",
        "      <td>hello welcom 'm lando calrissian 'm administr ...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>229</th>\n",
        "      <td>two bantha n't see ... wait second sand peopl ...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>624</th>\n",
        "      <td>ca n't keep vision head friend got help</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>302</th>\n",
@@ -2104,17 +2102,17 @@
        "    <tr>\n",
        "      <th>223</th>\n",
        "      <td>well come get late hope get back uncl owen rea...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
        "      <td>well thing n't sinc left bigg ... quiet</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
        "      <td>get mess realli n't know seem made suffer lot ...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>643</th>\n",
@@ -2128,18 +2126,18 @@
       "text/plain": [
        "                                        dialogue_clean  cluster\n",
        "631     yes yes obi-wan listen cave rememb failur cave        0\n",
-       "599  hello welcom 'm lando calrissian 'm administr ...        1\n",
-       "229  two bantha n't see ... wait second sand peopl ...        1\n",
-       "624            ca n't keep vision head friend got help        1\n",
+       "599  hello welcom 'm lando calrissian 'm administr ...        2\n",
+       "229  two bantha n't see ... wait second sand peopl ...        2\n",
+       "624            ca n't keep vision head friend got help        2\n",
        "302                       'd crazi follow us would n't        1\n",
        "637  stop must depend fulli train jedi knight forc ...        0\n",
-       "223  well come get late hope get back uncl owen rea...        4\n",
-       "70             well thing n't sinc left bigg ... quiet        4\n",
-       "53   get mess realli n't know seem made suffer lot ...        4\n",
+       "223  well come get late hope get back uncl owen rea...        1\n",
+       "70             well thing n't sinc left bigg ... quiet        2\n",
+       "53   get mess realli n't know seem made suffer lot ...        1\n",
        "643               luke n't give hate -- lead dark side        0"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
